# tos-vm

./: Cargo.toml  LICENSE  README.md  build-example.sh  setup-toolchain.sh
assembler/: Cargo.toml
assembler/src/: lib.rs  opcode.rs
ast/: Cargo.toml
ast/src/: expressions.rs  program.rs
ast/src/functions/: declared.rs  hook.rs  mod.rs
ast/src/token/: mod.rs
builder/: Cargo.toml
builder/src/: hook.rs  lib.rs
builder/src/environment/: mod.rs
builder/src/environment/xstd/: array.rs  bytes.rs  integer.rs  map.rs  math.rs  mod.rs  optional.rs  range.rs  string.rs
builder/src/manager/: enum.rs  mod.rs  opaque.rs  struct.rs
builder/src/mapper/: const_function.rs  function.rs  mod.rs
bytecode/: Cargo.toml
bytecode/src/: module.rs
compiler/: Cargo.toml
compiler/src/: error.rs  lib.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_REDESIGN.md  ARCHITECTURE_REFACTOR_PLAN.md  INTEGRATION_GUIDE.md  README_VM_INTEGRATION.md  RETURN_DATA_IMPLEMENTATION.md  SESSION_SUMMARY_2025_11_02.md  SOLANA_AUDIT_REPORT.md  SOLANA_COMPARISON_ANALYSIS.md  SOLANA_VS_TOS_RETURN_DATA_COMPARISON.md  THIRD_PARTY_REVIEW_GUIDE.md  TOOLCHAIN_DEVELOPMENT.md  TOS_VM_IMPLEMENTATION_GUIDE.md  TOS_VM_TBPF_REFACTORING_PLAN.md  VM_ENGINE_INTEGRATION_PLAN.md
environment/: Cargo.toml
environment/src/: error.rs  function.rs  lib.rs
examples/: Cargo.toml  README.md  run_hello_world.rs  run_u128_test.rs
examples/hello-world/: .gitignore  Cargo.toml  README.md  build.sh
examples/hello-world/src/: lib.rs
examples/u128-test/: Cargo.toml  README.md  build.sh  rust-toolchain.toml
examples/u128-test/.cargo/: config.toml
examples/u128-test/src/: lib.rs
lexer/: Cargo.toml
lexer/src/: lib.rs
parser/: Cargo.toml
parser/src/: context.rs  error.rs  lib.rs  mapper.rs
program-runtime/: Cargo.toml
program-runtime/src/: error.rs  invoke_context.rs  lib.rs  memory.rs  storage.rs  vm.rs
program-runtime/src/syscalls/: mod.rs
sdk/: Cargo.toml
sdk/src/: lib.rs  syscalls.rs
syscalls/: Cargo.toml
syscalls/src/: balance.rs  blockchain.rs  lib.rs  logging.rs  return_data.rs  storage.rs
tbpf/: Cargo.toml
tbpf/src/: context.rs
tbpf/src/syscalls/: log.rs
test-runner/: Cargo.toml
types/: Cargo.toml
types/benches/: cell.rs  u256.rs
vm/: Cargo.toml
vm/benches/: vm.rs
vm/src/: error.rs  iterator.rs  lib.rs  stack.rs  validator.rs
vm/src/chunk/: mod.rs  reader.rs
vm/src/instructions/: constructor.rs  iterator.rs  memory.rs  mod.rs  operator.rs
vm/src/tests/: full.rs  mod.rs  op_code.rs
