[workspace]
resolver = "2"

members = [
    "program-runtime",
    "syscalls",
    "sdk",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tos-network/tos-vm"
authors = ["TOS Maintainers <info@tos.network>"]

[workspace.dependencies]
# Core TBPF engine
tos-tbpf = { path = "../tos-tbpf" }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
