[package]
name = "tos-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
tos-ast = { path = "../ast" }
tos-bytecode = { path = "../bytecode" }
tos-types = { path = "../types" }
tos-environment = { path = "../environment" }
thiserror = "2.0.1"
log = "0.4.22"

[dev-dependencies]
tos-builder = { path = "../builder" }
tos-lexer ={ path = "../lexer" }
tos-parser = { path = "../parser" }
