[workspace]

[package]
name = "tos-vm-examples"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "run_hello_world"
path = "run_hello_world.rs"

[dependencies]
tos-program-runtime = { path = "../program-runtime" }
tos-syscalls = { path = "../syscalls" }
tos-tbpf = { path = "../../tos-tbpf" }
env_logger = "0.11"
log = "0.4"
