[package]
name = "tos-program-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "TOS program runtime for TBPF execution"

[dependencies]
# Core TBPF engine
tos-tbpf = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
env_logger = "0.11"
