[package]
name = "tos-syscalls"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "TOS syscall implementations for TBPF programs"

[dependencies]
# Core TBPF engine
tos-tbpf = { workspace = true }

# TOS program runtime
tos-program-runtime = { path = "../program-runtime" }

# Error handling
thiserror = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
