[package]
name = "tos-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
tos-bytecode = { path = "../bytecode" }
tos-types = { path = "../types" }
tos-environment = { path = "../environment" }
thiserror = "2.0.3"
log = "0.4.26"
indexmap = "2.8.0"

[dev-dependencies]
tos-builder = { path = "../builder" }
tos-lexer ={ path = "../lexer" }
tos-parser = { path = "../parser" }
tos-compiler = { path = "../compiler" }
criterion = "0.5.1"
anyhow = "*"
serde_json = "*"

[[bench]]
name = "vm"
harness = false

[features]
infinite-cell-depth = ["tos-types/infinite-cell-depth"]
logging = []
